--- a/app/src/main/res/drawable/shape_rectangle.xml
+++ b/app/src/main/res/drawable/shape_rectangle.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <size android:width="100px"
-        android:height="20px" />
+    <size android:width="100dp"
+        android:height="50dp" />
     <solid android:color="@color/background" />
-    <stroke android:width="2px"
+    <stroke android:width="3dp"
         android:color="@color/black" />
-    <corners android:radius="5px" />
+    <corners android:radius="20dp" />
 
 </shape>
