--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/divider"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
     <include layout="@layout/header_layout"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:src="@drawable/blank_rectangle"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +29,9 @@
         android:name="com.se.tasklist.NavigatorFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_weight="5"
+        android:background="@color/background"
+        android:layout_marginRight="1dp"
         />
 
     <androidx.fragment.app.FragmentContainerView
@@ -28,7 +39,9 @@
         android:name="com.se.tasklist.ListViewFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_weight="7"
+        android:background="@color/background"
+        android:layout_marginLeft="1dp"
         />
 
     </LinearLayout>
