--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200px"
+    android:layout_height="75dp"
     android:background="@color/header">
 
     <ImageView
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/title_icon"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="20px"
+        android:layout_marginLeft="10dp"
         />
 
 </RelativeLayout>
