--- a/app/src/main/res/layout/tasklist_item.xml
+++ b/app/src/main/res/layout/tasklist_item.xml
@@ -2,24 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="40dp">
+    android:layout_height="40dp"
+    android:background="@color/transparent">
 
     <ImageView
         android:id="@+id/item_icon"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:background="@color/transparent"
         android:layout_gravity="center"
         android:src="@drawable/list"
-        />
+        android:contentDescription="@null" />
+
     <TextView
         android:id="@+id/list_name"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3"
+        android:background="@color/transparent"
         android:gravity="center_vertical"
         android:text="Task1"
-        android:textSize="30dp"
+        android:textSize="25sp"
         />
 
 </LinearLayout>
