--- a/app/src/main/res/layout/fragment_list_view.xml
+++ b/app/src/main/res/layout/fragment_list_view.xml
@@ -18,6 +18,7 @@
             android:background="@color/background"
             android:orientation="horizontal">
             <ImageView
+                android:id="@+id/list_title_label"
                 android:layout_width="50dp"
                 android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
