--- a/app/src/main/res/layout/fragment_navigator.xml
+++ b/app/src/main/res/layout/fragment_navigator.xml
@@ -59,6 +59,31 @@
             android:background="@color/transparent"
             />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@color/transparent">
+            <ImageButton
+                android:id="@+id/create_label_button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/add"
+                android:background="@color/navigator"
+                />
+            <EditText
+                android:id="@+id/create_label_text"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:layout_marginRight="10dp"
+                android:paddingStart="10dp"
+                android:hint="Add new label"
+                android:background="@drawable/shape_rectangle"
+                />
+        </LinearLayout>
+
     </LinearLayout>
 
 </FrameLayout>
