Implements function to delete tasks on item long click.

--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -95,6 +95,6 @@
         android:gravity="top"
         android:padding="10dp"
         android:layout_margin="30dp"
-        android:hint="Add comments" />
+        android:hint="@string/comment_hint" />
 
 </LinearLayout>
