--- a/app/src/main/res/layout/fragment_list_view.xml
+++ b/app/src/main/res/layout/fragment_list_view.xml
@@ -45,6 +45,7 @@
             />
 
         <LinearLayout
+            android:id="@+id/create_task"
             android:layout_width="match_parent"
             android:layout_height="50dp">
             <ImageButton
