--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -14,6 +14,8 @@
             android:layout_width="0dp"
             android:layout_height="20dp"
             android:layout_weight="1"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_gravity="center_vertical"
             android:background="@color/background"
             android:src="@drawable/list_title_label"
@@ -22,7 +24,7 @@
             android:id="@+id/task_detail_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
+            android:layout_weight="7"
             android:layout_gravity="center_vertical"
             android:background="@color/background"
             android:textSize="30sp"
@@ -31,10 +33,12 @@
         <CheckBox
             android:id="@+id/task_important"
             android:layout_width="0dp"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             android:layout_weight="1"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
             android:layout_gravity="center_vertical|right"
+            android:button="@null"
+            android:background="@drawable/star_checkbox_selector"
             />
     </LinearLayout>
 
@@ -73,7 +77,7 @@
         <ImageView
             android:id="@+id/detail_ddl_icon"
             android:layout_width="50dp"
-            android:layout_height="20dp"
+            android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             android:background="@color/navigator"
             android:src="@drawable/date"
