--- a/app/src/main/res/layout/tasklist_item.xml
+++ b/app/src/main/res/layout/tasklist_item.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="30dp"
+    android:layout_height="40dp"
     android:background="@color/transparent">
 
     <ImageView
         android:id="@+id/list_icon"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="40dp"
         android:layout_weight="1"
+        android:scaleType="fitCenter"
         android:background="@color/transparent"
         android:layout_gravity="center"
         android:src="@drawable/list"
@@ -18,7 +19,7 @@
     <TextView
         android:id="@+id/list_name"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="40dp"
         android:layout_weight="3"
         android:background="@color/transparent"
         android:gravity="center_vertical"
